fixing header alignment to 1680px

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,11 +79,12 @@
   }
 
   .padding-container {
-    @apply px-6 lg:px-20;
+    @apply px-6 lg:px-20 3xl:px-0;
   }
 
+  /* 1440px */
   .max_padd_container {
-    @apply mx-auto max-w-[1440px] px-6 lg:px-20;
+    @apply mx-auto max-w-[1680px] px-6 lg:px-20 3xl:px-0;
   }
 
   .flexCenter {
